--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">GymTraker</string>
     <string name="exercise_name">Exercise Name</string>
+    <string name="settings">Settings</string>
+    <string name="preferences_dark_theme">Use Dark Theme</string>
+    <string name="preferences_dark_theme_summary">Convert the UI to be dark instead of light. (Not implemented yet).</string>
 </resources>
